# ai-assistant

./: .env.example  .gitattributes  .gitignore  BRAND.md  CLAUDE.md  CUSTOMIZATION.md  DESIGN_BRIEF.md  FOUNDATION.md  Notes.md  PRESENTATION.md  ROADMAP.md  TEMPLATES.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  start.bat
.claude/: launch.json
assets/: protokollo_taxonomy_template.xlsx
assets/discord_templates/: board_email_mirror.md
assets/email_templates/: _shell.html  archive_confirmation.html  archive_failure.html  egkyklios_cover.html  invitation_board.html  minutes_share.html  scheduling_no_poll.html  scheduling_with_poll.html
assets/governance/: articles.json
brand/: AmnestySwatches.ase  amnesty_style_references.md
data/: template_234_redesigned.html
data/prompts/: board_minutes.md
docs/: DEBUG_CLI.md  MINUTES_PIPELINE.md  archive_workflow_overview.md  code_structure_review.md  google_apps_script_trigger.js
docs/api_setup/: brevo.md  discord.md  google_cloud.md  microsoft_graph.md  zoom.md
docs/plans/: 2026-04-08-phase2-board-minutes-design.md  2026-04-08-phase2-board-minutes-impl.md  discord_bot_modernization.md  phase3_email_intake_setup.md  protokollo_categories_draft.md
framework/: ETHICS_FRAMEWORK.md
scripts/: build_design_bundle.py  build_protokollo_taxonomy_template.py  ingest_governance_docs.py  preview_email.py  render_gallery.py  snapshot_invitation_template.py
scripts/apps_script/: google_apps_script_trigger.js
src/: config.py  main.py
src/api/: webhooks.py  (+1 more)
tests/: conftest.py  test_google_drive_methods.py  test_invitation_workflow.py  test_minutes_workflow.py
(+163 files in other folders)
