[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "0.1.0"
description = "AI Automation Platform for Amnesty International Greece"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.49.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "msal>=1.28.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.120.0",
    "discord.py>=2.3.0",
    "reportlab>=4.1.0",
    "python-docx>=1.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "cryptography>=42.0.0",
    "aioimaplib>=1.1.0",
    "aiosmtplib>=3.0.0",
    "openpyxl>=3.1.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
]

[project.scripts]
ai-assistant = "src.cli.commands:main"

# setuptools src-layout: discover the top-level `src` package (which then
# contains cli/, integrations/, workflows/, etc. as sub-packages).  The
# editable install adds the project root to sys.path so ``import src.cli``
# resolves the same way it does in tests.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
